<resources>
    <string name="app_name">GentleLoansDemo</string>

    <string name="mine_nav_title_info">我的</string>
    <string name="main_nav_title_main">主页</string>
    <string name="app_icon">app_icon</string>

    <string name="存储">&#xe61d;</string>
    <string name="编辑">&#xe61e;</string>
    <string name="存储卷">&#xe61f;</string>
    <string name="等待">&#xe620;</string>
    <string name="概览">&#xe621;</string>
    <string name="公告">&#xe622;</string>
    <string name="工单">&#xe623;</string>
    <string name="告警">&#xe624;</string>
    <string name="画板37">&#xe625;</string>
    <string name="画板38">&#xe626;</string>
    <string name="恢复备份">&#xe627;</string>
    <string name="减去">&#xe628;</string>
    <string name="警告">&#xe629;</string>
    <string name="镜像">&#xe62a;</string>
    <string name="取消">&#xe62b;</string>
    <string name="内存">&#xe62c;</string>
    <string name="确定">&#xe62d;</string>
    <string name="容量管理">&#xe62e;</string>
    <string name="删除">&#xe62f;</string>
    <string name="日志">&#xe630;</string>
    <string name="上线">&#xe631;</string>
    <string name="收起">&#xe632;</string>
    <string name="添加">&#xe633;</string>
    <string name="提示">&#xe634;</string>
    <string name="网络">&#xe635;</string>
    <string name="文件">&#xe636;</string>
    <string name="向右">&#xe637;</string>
    <string name="文件夹展开">&#xe638;</string>
    <string name="向右翻页">&#xe639;</string>
    <string name="文件夹收起">&#xe63a;</string>
    <string name="向左">&#xe63b;</string>
    <string name="向左翻页">&#xe63c;</string>
    <string name="消息">&#xe63d;</string>
    <string name="应用">&#xe63e;</string>
    <string name="用户管理">&#xe63f;</string>
    <string name="上传">&#xe640;</string>
    <string name="运营流程">&#xe641;</string>
    <string name="运营分析">&#xe642;</string>
    <string name="展开">&#xe643;</string>
    <string name="暂停">&#xe644;</string>
    <string name="终止">&#xe645;</string>
    <string name="资源池">&#xe646;</string>
    <string name="资源管理">&#xe647;</string>
    <string name="分享">&#xe640;</string>
    <string name="客服">&#xe648;</string>
    <string name="身份证">&#xe649;</string>
    <string name="全屏">&#xe64a;</string>
    <string name="说明">&#xe64b;</string>
    <string name="收藏">&#xe64c;</string>
    <string name="箭头上">&#xe64d;</string>
    <string name="箭头右">&#xe64f;</string>
    <string name="箭头下">&#xe650;</string>
    <string name="扫码">&#xe651;</string>
    <string name="选择">&#xe652;</string>
    <string name="tab关闭">&#xe653;</string>
    <string name="换一换">&#xe654;</string>
    <string name="地址">&#xe65e;</string>

    <string name="login_username">11位手机号</string>
    <string name="login_hint">登录</string>
    <string name="login_password">6位验证码</string>
    <string name="login_forget_hint">忘记密码?</string>
    <string name="login_login">登录</string>
    <string name="default_debug_sms">888888</string>
    <string name="title_permission_dialog">警告</string>
    <string name="resume">继续</string>
    <string name="cancel">取消</string>
    <string name="message_permission_rationale">您拒绝了以下权限,这将导致应用无法继续使用,请您在弹出的对话框同意授权,或者前往应用设置中心授权以下权限后继续使用:\n\n%1$s</string>
    <string name="app_loading_text">拼命加载中…</string>
    <string name="user_service_title">登陆即视为同意《君可贷服务协议》</string>
    <string name="title_warning_dialog">提醒</string>
    <string name="hint_yys_auth">您还未进行运营商验证, \n请点击下面的验证按钮前往验证</string>
    <string name="hint_yys_auth_pass">您已通过运营商验证, \n请点击下一步按钮完成验证</string>
    <string name="switch_account">切换账号</string>
    <string name="hint_real_auth">您还未进行实名认证,\n请使用一张预留手机号与登录号码相同的银行卡\n来验证您的真实身份</string>
    <string name="hint_real_auth_pass">您已通过实名认证,\n请点击完成绑定前往应用</string>
    <string name="bank">选择银行</string>
    <string name="submit">提交</string>
    <string name="confirm">确定</string>
    <string name="save_">保存</string>
    <string name="text_apply">立即申请</string>
    <string name="quit">退出</string>
    <string name="submit_registration">提交申请</string>
    <string name="hint_gender">请输入性别</string>
    <string name="hint_company_name">请输入单位名称</string>
    <string name="hint_level">输入职位信息</string>
    <string name="hint_department">请输入部门名称</string>
    <string name="hint_year_income">请输入年收入（万元）</string>
    <string name="hint_gjj_month">请输入公积金月缴金额(元)</string>
    <string name="text_unselected">未选择</string>
    <string name="hint_term">请输入还款期限(月)</string>
    <string name="hint_zx_pass">请输入征信密码</string>
    <string name="hint_zx_account">请输入征信账号</string>
    <string name="hint_zx_verify">请输入征信验证码</string>
    <string name="hint_gjj_pass">请输入公积金密码</string>
    <string name="hint_gjj_account">请输入公积金账号</string>
    <string name="hint_zw_pass">请输入政务网密码，仅限浙江地区</string>
    <string name="hint_zw_account">请输入政务网账号，仅限浙江地区</string>
    <string name="debug_bank_sms">000000</string>
    <string name="text_uneditable_hint"> 一不可编辑一 </string>
    <string name="hint_name">请输入姓名</string>
    <string name="hint_id_card">请输入身份证</string>
    <string name="hint_marital">请选择婚姻状况</string>
    <string name="hint_staff">请选择编制</string>
    <string name="hint_pey_type">请选择还款方式</string>
    <string name="text_logout">退出登录</string>
    <string name="text_loan_log">贷款记录</string>
    <string name="text_personal_info">个人信息</string>
    <string name="text_about_us">关于我们</string>
    <string name="text_version">版本号</string>
    <string name="text_empty_list">空空如也..</string>
    <string name="text_easter_egg">没事别乱点,会出Bug</string>

    <string name="text_estate">房产信息</string>
    <string name="text_car">车产信息</string>
    <string name="text_usage_warning">说明：\n

                借款不得用于以下目的和用途：\n

                A:借款资金不得以任何形式进入证券市场或用于股本权益性投资；\n

                B:借款资金不得用于国家明令禁止或限制的经营活动；\n

                C:借款资金不得用于房地产项目开发。\n</string>
    <string name="text_hint_usage_term">借款期间为自借款发起之日起止约定的清偿全部贷款本息之日止</string>
    <string name="about_us">公司介绍\n
        <h>\t\t浙江君磊资产管理有限公司始建于2016年11月07日，是专注于基金/证券/期货/投资行业的民营企业公司，公司坐落于美丽的浙江省杭州，以始终坚持“诚信为本、客户至上、互惠互利，开拓创新”为企业宗旨，本着“本质为本、专业执着、精益求精”的经营销售理念，力求给客户提供全方位优质服务。君磊资管，你身边的金融服务专家，全新服务体验，银行团队全程服务，规范经营，健康发展，致力于打造用户一站式的融资体验。
            \n</h>
        联系我们：0571-86809823\n
    </string>
    <string name="service_agreement">
        <Data><![CDATA[\t\t欢迎阅读君磊助手服务条款协议(下称“本协议”)。本协议双方为君磊助手（以下简称“君磊助手”）与君磊助手用户（包括个人和企业客户），本服务协议具有合同效力。本协议内容包括协议正文及所有已经发布的或将来可能发布的各类规则。所有规则为协议不可分割的一部分，与协议正文具有同等法律效力。
\n1. 接受条款
\n以任何方式进入君磊助手APP即表示您同意自己已经与君磊助手订立本协议，且您将受本协议的条款约束。君磊助手随时自行全权决定更改条款。如条款有任何变更，君磊助手将在其APP上刊载公告，通知予您。如您不同意相关变更，必须停止使用服务。经修订的条款一经在君磊助手APP公布后，立即自动生效。您应在第一次登录后仔细阅读修订后的条款，并有权选择停止继续使用服务；一旦您继续使用服务，则表示您已接受经修订的条款，当您与君磊助手发生争议时，应以最新的服务协议为准。除另行明确声明外，任何使服务范围扩大或功能增强的的新内容均受本协议约束。除非经君磊助手的授权高层管理人员签订书面协议，本协议不得另行作出修订。
\n2．定义
\n2.1 用户及用户注册：用户必须是具备完全民事行为能力的自然人，或者是具有合法经营资格的实体组织。无民事行为能力人、限制民事行为能力人以及无经营或特定经营资格的组织不应当注册为君磊助手用户或超过其民事权利或行为能力范围从事信息发布、交易的，其与君磊助手之间的服务协议自始无效，君磊助手一经发现，有权立即注销该用户，并追究其使用君磊助手“服务”的一切法律责任。用户注册是指用户登录君磊助手，并按要求填写相关信息并确认同意履行相关用户协议、进行实名认证的过程。用户因进行信息发布、交易、获取有偿服务或接触君磊助手服务器而发生的所有应纳税赋，以及一切硬件、软件、服务及其它方面的费用均由用户负责支付。
\n2.2 会员：在君磊助手平台上注册的用户成为君磊助手会员。 君磊助手作为有借款需求客户（企业、个人）和资金提供方（借出者）的信息对接平台以及获取各类与投融资相关的服务信息的地点。君磊助手会对客户和机构的身份信息的真实性进行审核，但对双方交易所涉及的服务的质量、交易方履行其在贸易协议项下的各项义务的能力以及交易风险等并不作出保证。君磊助手并不作为接受服务方或是提供服务方的身份参与交易行为的本身。君磊助手提醒用户应该具备风险识别能力。
\n3.注册义务
\n注册义务您必须按照申请注册会员的表格，真实、准确、完整的填写您的资料并进行相应的实名认证；维持并及时更新资料，使其保持真实、准确、完整和反应当前情况。倘若您提供的资料不真实、准确和完整或我公司有合理理由怀疑该资料不真实、准确、完整的，我公司有权暂停或终止您的注册身份，并拒绝您在目前和将来对服务以任何形式使用。 
\n注册名、密码和保密在登记过程中，您将选择注册名和密码。注册名的选择应遵守法律法规及社会公德。您必须对您的密码保密，您将对您注册名和密码下发生的所有活动承担责任。如发现任何人未经您同意使用您的注册名跟密码，你需立即通知我公司；对该行为造成的损害，我公司不负任何责任。
\n4. 您的权利和义务
\n4.1您有权利拥有在君磊助手的会员名及登录密码，并有权利使用自己的会员名及密码随时登录君磊助手平台。您不得以任何形式擅自转让或授权他人使用自己的君磊助手会员名及密码；
\n4.2 您有权根据本服务协议的规定以及君磊助手上发布的相关规则利用君磊助手上信息发布平台查询服务信息、提交融资信息、参加君磊助手的有关活动以及有权享受君磊助手提供的其它的有关服务；
\n4.3 您在君磊助手上交易过程中如与其他融资机构因交易产生纠纷，可以请求君磊助手从中予以协调。您如发现其他机构有违法或违反本服务协议的行为，可以向君磊助手进行反映和要求处理。
\n4.4 您同意遵守君磊助手的交易规则，接收来自君磊助手或君磊助手合作伙伴发出的邮件或信息。
\n4.5 您应当保证在使用君磊助手平台进行信息发布过程中遵守诚实信用的原则，不得在发布的信息中包含有反动、暴力、淫秽、毒品、赌博、教唆及有损社会公共道德的内容；不得发布各类违法或违规信息；
\n4.6 您不应在君磊助手平台上恶意评价其他用户，或采取不正当手段提高自身的信用度或降低其他用户的信用度；
\n4.7 您在君磊助手平台上不得发布包含有国家禁止或限制发布包含有侵犯他人知识产权或其它合法权益的机密类信息，也不得发布违背社会公共利益或公共道德的、或是君磊助手认为不适合在君磊助手上发布的信息。
\n4.8 您在君磊助手平台上不得发布包含有国家禁止或限制发布包含有侵犯他人知识产权或其它合法权益的机密类信息，也不得发布违背社会公共利益或公共道德的、或是君磊助手认为不适合在君磊助手上发布的信息。
\n4.9 您同意，不对君磊助手上任何数据作商业性利用，包括但不限于在未经君磊助手事先书面批准的情况下，以复制、传播等方式使用在君磊助手APP上展示的任何资料。
\n4.10 您同意，遵守法律法规规定的相关义务。
\n5. 君磊助手的权利义务
\n5.1君磊助手有权通过自身或委托其认可的第三方机构为您提供除信息发布外的融资比较、“融资体检“和实现一站式融资实现等增值服务；
\n5.2君磊助手有义务在现有技术上维护整个网上平台的正常运行，并努力提升和改进技术。对与您在注册使用君磊助手平台中所遇到的与信息发布或注册有关的问题及反应的情况，君磊助手应及时作出回复；
\n
\n5.4君磊助手有权对出借人与借款人的资格条件、信息的真实性、融资项目的真实性、合法性进行必要审核；
\n5.5您在君磊助手进行交易过程中如与其它投资者产生纠纷，请求君磊助手从中予以调处，经君磊助手审核后，君磊助手有权通过电子邮件联系向纠纷双方了解情况，并将所了解的情况通过电子邮件互相通知对方；
\n5.6您因在君磊助手平台上进行借款而与其他借出者产生诉讼的，您通过司法部门或行政部门依照法定程序要求君磊助手提供相关数据，君磊助手应积极配合并提供有关资料； 
\n
\n5.8经国家生效法律文书或行政处罚决定确认您存在违法行为，或者君磊助手有足够事实依据可以认定您存在违法或违反服务协议行为的，君磊助手有权在君磊助手平台及所在网站上以网络发布形式公布您的违法行为；
\n5.9 在您使用君磊助手服务时，君磊助手有权接收并记录您的个人信息，包括但不限于IP地址、网站Cookie中的资料及您要求取用的网页记录等。
\n6. 许可使用权[该规定可能存在违反《网络借贷信息中介机构业务活动管理暂行办法》第二十七条规定：“.….. 网络借贷信息中介机构及其资金存管机构、其他各类外包服务机构等应当为业务开展过程中收集的出借人与借款人信息保密，未经出借人与借款人同意，不得将出借人与借款人提供的信息用于所提供服务之外的目的…….”的风险，从合规性的角度考虑，我们倾向于建议删除该等条款，但公司也可以根据实际情况对此进行取舍。]
\n许可使用权：您授予本公司永久的、免费的、完整的许可使用权利（并且有权对该权利进行再授权），使我公司有权使用、复制、修改、发布、翻译、分发您的资料或制作其派生作品，以已知或日后开发的任何形式、媒体或技术，将您的资料纳入其他作品里。
\n7. 隐私权 
\n隐私权：我公司不公开您选择保密的注册信息及其他个人信息。但在下列情况下，我公司有权全部或部分披露您的保密信息。 
\n7. 1 根据法律规定，或应行政机关、司法机关要求，向第三人或行政机关、司法机关披露； 
\n7. 2 如您系权利人并针对他人在君磊助手上侵犯您利益的行为提起投诉，应被投诉人要求，向被投诉人披露； 
\n7. 3 根据法律规定，权利人认为您在君磊助手上的行为侵犯其合法权利并提出投诉的，可向权利人披露； 
\n7. 4 根据法律规定，权利人认为您在君磊助手上的行为侵犯其合法权利并提出投诉的，可向权利人披露； 
\n7. 5 根据法律和君磊助手APP规则，其他我公司认为适合披露的。
\n8. 其他 
\n8.1 免责声明: 您将对您发布的信息及其他在君磊助手上发生的任何行为承担责任。
\n8.2. 不可抗力: 对于因君磊助手合理控制范围以外的原因，包括但不限于自然灾害、罢工或骚乱、物质短缺或定量配给、暴动、战争行为、政府行为、通讯或其他设施故障或严重伤亡事故等，致使君磊助手延迟或未能履约的，君磊助手不对您承担任何责任。
\n8.3. 转让：君磊助手转让本协议无需经您同意。
\n8.4.管辖：因本协议或本公司服务所引起的或与其有关的任何争议，应向浙江省杭州市拱墅区人民法院提起诉讼并适用中华人民共和国法律。]]></Data>


    </string>

    <string name="apply_info_form_notice">本人保证上述内容真实、合法、有效，如有问题，本人愿承担相应的法律责任（包括不限于民事责任及刑事责任等）。</string>

    <string name="hint_add">点击添加新项</string>
    <string name="hint_agent_id">请输入推荐人电话</string>
    <string name="hint_job_time">请输入入职时间</string>
    <string name="hint_company_address">请选择单位地址</string>
    <string name="hint_company_address_detail">请输入单位详细地址</string>
    <string name="hint_company_phone">请输入单位电话</string>
    <string name="hint_month_salary">请输入每月基本薪资</string>
    <string name="hint_pay_way">请选择发薪方式</string>
    <string name="camera_image">camera_image</string>
    <string name="text_loan_detail" >其中包含利息%.2f元,逾期利息%.2f元,罚息%.2f元</string>
    <string name="text_bank_hint" >还款日将从%s自动扣款,\n请确保还款账户余额充足</string>
    <string name="text_pay_type_comment" >贷款期限%s个月,贷款利率%s%%</string>
    <string name="text_repayment_interest_normal" >包含利息%.2f</string>
    <string name="text_repayment_interest_overdue" >包含逾期利息%.2f,罚息%.2f</string>
    <string name="text_id_hint">输入开户人身份证</string>
    <string name="text_bank_card_hint">请输入银行卡号</string>
    <string name="text_name_hint">输入开户人姓名</string>
    <string name="text_phone_hint">输入预留电话号码</string>
    <string name="text_verify_hint">输入验证码</string>
</resources>
