<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/toolbar_layout"/>
    <androidx.core.widget.NestedScrollView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:background="@color/light_gray_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/layoutLoanLog"
                style="@style/SliceLayoutHorizontal.Mine"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <TextView
                    android:text="@string/text_loan_log"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
                <com.apm29.yjw.demo.ui.widget.IconFontTextView
                    android:text="@string/箭头右"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutPersonalInfo"
                style="@style/SliceLayoutHorizontal.Mine"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutLoanLog">
                <TextView
                    android:text="@string/text_personal_info"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
                <com.apm29.yjw.demo.ui.widget.IconFontTextView
                    android:text="@string/箭头右"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutAboutUs"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutPersonalInfo"
                style="@style/SliceLayoutHorizontal.Mine">
                <TextView
                    android:text="@string/text_about_us"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
                <com.apm29.yjw.demo.ui.widget.IconFontTextView
                    android:text="@string/箭头右"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/layoutVersion"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutAboutUs"
                style="@style/SliceLayoutHorizontal.Mine">
                <TextView
                    android:text="@string/text_version"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/tvVersion"
                    tools:text="V1.3.0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <Button
                android:id="@+id/logout"
                style="@style/button_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:text="@string/text_logout"
                app:layout_constraintTop_toBottomOf="@id/layoutVersion"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <View
                style="@style/EditDivider"
                android:layout_marginStart="0dp"
                android:layout_width="12dp"
                android:background="@color/white_foreground"
                app:layout_constraintTop_toBottomOf="@id/layoutLoanLog"
                />

            <View
                style="@style/EditDivider"
                android:layout_marginStart="0dp"
                android:layout_width="12dp"
                android:background="@color/white_foreground"
                app:layout_constraintTop_toBottomOf="@id/layoutPersonalInfo"
                />
            <View
                style="@style/EditDivider"
                android:layout_marginStart="0dp"
                android:layout_width="12dp"
                android:background="@color/white_foreground"
                app:layout_constraintTop_toBottomOf="@id/layoutAboutUs"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>